[Style]: Fixing overflowing problem of Navbar elements

--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,9 @@
 @tailwind utilities;
 
 @import url("https://fonts.googleapis.com/css2?family=Satisfy&display=swap");
+
+body {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
